# cNMF

./: .gitignore  .pdm-python  CHANGELOG.md  Untitled.ipynb  pyproject.toml  ruff.toml
Tutorials/: analyze_pbmc_example_data.ipynb  analyze_simulated_example_data.ipynb
src/cnmf/: __init__.py  cnmf.py  preprocess.py
