[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cnmf"
version = "1.8.1"
description = "Consensus NMF for scRNA-Seq data"
readme = "README.md"
authors = [
    {name = "Dylan Kotliar", email = "dylkot@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "anndata>=0.11.1",
    "matplotlib>=3.9.3",
    "numpy>=2.0.2",
    "palettable>=3.3.3",
    "pandas>=2.0",
    "pyyaml>=6.0.2",
    "scanpy>=1.10.4",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "harmonypy>=0.0.10",
    "jax>=0.4.36",
    "jax-metal>=0.1.1; sys_platform == 'macos'"
]
requires-python = ">=3.10,<3.13"

[project.urls]
Homepage = "https://github.com/dylkot/cNMF"
"Bug Tracker" = "https://github.com/dylkot/cNMF/issues"

[project.scripts]
cnmf = "cnmf:main"

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.4.37",
]
[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
